fix menu thingy

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,6 +168,11 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
+            background-color: rgb(198,146,20);
+		}
+
+        .test:hover {
+            background-color: rgb(198,146,20);
 		}
 
 	strong, b {
